refactor(GameTable): Member분리에 따른 메서드 분리